# 2026-kermes

./: .gitignore  LICENSE  README.md  THANKS.md  config.example.yaml  install.sh  pyproject.toml
docs/: cli-orchestration-research.md
kermes/: __init__.py  cache.py  classifier.py  cli.py  compressor.py  config.py  router.py
