[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kermes-agent"
version = "0.1.0"
description = "Token-smart AI agent layer — intelligent model routing, context compression, and response caching built on top of Hermes Agent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "bbbirkan" }]
keywords = ["ai", "agent", "llm", "token", "optimization", "hermes", "openrouter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
kermes = "kermes.cli:main"

[project.urls]
Homepage = "https://github.com/bbbirkan/2026-kermes"
Repository = "https://github.com/bbbirkan/2026-kermes"
Issues = "https://github.com/bbbirkan/2026-kermes/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kermes*"]
